--- a/package.json
+++ b/package.json
@@ -11,6 +11,21 @@
     "url": "git+https://github.com/bryanbuchanan/texteditor.git"
   },
   "devDependencies": {
-    "@rollup/plugin-node-resolve": "^11.2.1"
+    "@rollup/plugin-commonjs": "^18.0.0",
+    "@rollup/plugin-node-resolve": "^11.2.1",
+    "rollup-plugin-livereload": "^2.0.0",
+    "rollup-plugin-postcss": "^4.0.0",
+    "rollup-plugin-serve": "^1.1.0",
+    "sass": "^1.32.11"
+  },
+  "dependencies": {
+    "prosemirror-commands": "^1.1.7",
+    "prosemirror-history": "^1.1.3",
+    "prosemirror-keymap": "^1.1.4",
+    "prosemirror-model": "^1.14.1",
+    "prosemirror-schema-basic": "^1.1.2",
+    "prosemirror-schema-list": "^1.1.4",
+    "prosemirror-state": "^1.3.4",
+    "prosemirror-view": "^1.18.4"
   }
 }
