--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
-  "name": "texteditor",
+  "name": "@22slides/texteditor",
   "version": "1.0.0",
+  "private": true,
+  "main": "dist/editor.js",
   "scripts": {
     "build": "rollup -c",
     "dev": "rollup -c --watch"
@@ -16,6 +18,7 @@
     "rollup-plugin-livereload": "^2.0.0",
     "rollup-plugin-postcss": "^4.0.0",
     "rollup-plugin-serve": "^1.1.0",
+    "rollup-plugin-terser": "^7.0.2",
     "sass": "^1.32.11"
   },
   "dependencies": {
@@ -27,5 +30,14 @@
     "prosemirror-schema-list": "^1.1.4",
     "prosemirror-state": "^1.3.4",
     "prosemirror-view": "^1.18.4"
-  }
+  },
+  "description": "",
+  "bugs": {
+    "url": "https://github.com/bryanbuchanan/texteditor/issues"
+  },
+  "homepage": "https://github.com/bryanbuchanan/texteditor#readme",
+  "directories": {
+    "test": "test"
+  },
+  "author": ""
 }
